# uruguay-news

./: .gitignore  .yamllint  LICENSE  README.md  SECURITY.md  mkdocs.yml
.cursor/: .gitignore  README.md  mcp.env.template  mcp.json
.cursor/rules/: ai-analysis-patterns.mdc  community-guidelines.mdc  data-collection.mdc  development-practices.mdc  development-workflow.mdc  github-mcp-integration.mdc  github-workflow.mdc  mcp-integration.mdc  project-overview.mdc  technology-stack.mdc
.github/workflows/: deploy.yml  docs.yml
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/src/uruguay_news/: __init__.py  models.py  services.py
backend/tests/: __init__.py  test_main.py
docs/: .gitignore  README.md  index.md  technical.md
docs/ai/: bias.md  entities.md  performance.md  sentiment.md
docs/api/: graphql.md  rest.md  websocket.md
docs/architecture/: ai-pipeline.md  data-flow.md  google-cloud.md  overview.md
docs/community/: changelog.md  code-of-conduct.md  contributing.md  roadmap.md
docs/development/: deployment.md  gitignore-strategy.md  guidelines.md  setup.md  testing.md  uv-guide.md
docs/getting-started/: configuration.md  installation.md  overview.md  quick-start.md
docs/sources/: data-collection.md  social-media.md  uruguayan-media.md
frontend/: .gitignore
frontend/web/: package.json  tsconfig.json
frontend/web/src/: App.css  App.test.tsx  App.tsx  index.css  index.tsx
frontend/web/src/components/: Header.tsx
frontend/web/src/pages/: About.tsx  Dashboard.tsx  NewsAnalysis.tsx
